--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DEFAULT_PORT = 8000
 DATA_KEY = dherliansyah
 
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=
-DB_NAME=wallet_akses
+DB_HOST=www.db4free.net
+DB_USER=dikiherli
+DB_PASS=padangdik
+DB_NAME=zwalletmobile
